--- a/Game_2048/app/src/main/res/values/strings.xml
+++ b/Game_2048/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Game_2048</string>
-    <string name="text_best">Best</string>
-    <string name="text_score">Score</string>
+    <string name="text_best">Best Score</string>
+    <string name="text_score">Current Score</string>
     <string name="text_newGame">New Game</string>
     <string name="text_empty"> </string>
     <string name="text_init_score">0</string>
